laboriously made loading placeholder for stripe id the same size as the eventual ID to prevent reformatting changes

--- a/public/biz.html
+++ b/public/biz.html
@@ -75,7 +75,7 @@
       <div id = "fade-in">
         <div id = "biz-bio">
           <p1 id = "biz-name"> Stripe ID: </p1>
-          <p id = "stripe-ID"> loading... </p>
+          <p id = "stripe-ID"> ..............loading.............. </p>
         </div>
       </div>
 
@@ -88,7 +88,7 @@
             </td>
 
             <td>
-              <input onchange = "updatePost2(event)" onfocus="newProductPrompt()" onfocusout="promptClear()" placeholder="Promotion">
+              <input onchange = "updatePost2(event)" onfocus="newProductPrompt()" onfocusout="promptClearcus()" placeholder="Promotion">
             </td>
 
             <td class = "td-money">
