got rid of the formatting for a link for the back button on the biz.html page

--- a/public/biz.html
+++ b/public/biz.html
@@ -42,7 +42,7 @@
 
       <button id="banner-left" class = "top">
         <span id = "fade-in">
-          <a href = "/"> back </a>
+          <a id = "back-button" href = "/"> back </a>
         </span>
       </button>
   
