--- a/public/biz.html
+++ b/public/biz.html
@@ -24,7 +24,8 @@
      <link rel="icon" href="favicon.png"/>
      
      <!--Load Fonts-->
-     <link async defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
  
      <!--CSS LINKS-->
      <link href = "css/biz_position.css" rel = "stylesheet" type = "text/css" />
