--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       <button id="banner-right" class = "top">
         <span id = "fade-in">
           <span id = "are-you-biz" onClick = "onboardBusiness()"> <!--  #are-you-biz  -->
-            Are you a business? 
+            Are you a business?
           </span>
         </span>
       </button>
@@ -85,7 +85,7 @@
         </div>
 
         <div id = "market-list">
-          <table>
+          <table id = "product-table"> <!---
             <tr>
               <td class = "td-first">Moose Stuff Llc.</td>
               <td>Magic</td>
@@ -116,6 +116,7 @@
               <td class = "td-money">$5</td>
               <td class = "td-last">buy</td>
             </tr>
+          -->
           </table>
         </div>
       </div>
