table rows added automatically according to anything in business db with status of doingBusiness formatted perfectly

--- a/public/index.html
+++ b/public/index.html
@@ -85,13 +85,8 @@
         </div>
 
         <div id = "market-list">
-          <table id = "product-table"> <!---
-            <tr>
-              <td class = "td-first">Moose Stuff Llc.</td>
-              <td>Magic</td>
-              <td class = "td-money">$200</td>
-              <td class = "product-detail-last">buy</td>
-            </tr>
+          <table id = "product-table">
+            <!---
             <tr>
               <td class = "td-first" >Smooth Talkers Co.</td>
               <td>Good Conversation</td>
