changed bizPage.js to biz.js cause I wasn't gettin it

--- a/public/biz.html
+++ b/public/biz.html
@@ -81,7 +81,7 @@
       </div>
 
       <div id = "market-list">
-        <table>
+        <table ">
           <tr>
 
             <td class = "td-first">
@@ -116,7 +116,7 @@
     </div>
 
     </div>
-    <script src = "/bizPage.js">
+    <script src = "/biz.js">
     </script>
   </body>
 </html>
