--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,18 @@
 
         <div id = "market-list">
           <table id = "product-table">
+            <!-- Table content generated from firestore data.
+            That html snippet can be edited at "addRow()" of "../public/app.js"
+            Here it is for reference:
+
+                <tr id = product-row">
+                  <td class = "td-first"> ${d.biz} </td>
+                  <td> ${d.prod} </td>
+                  <td class = "td-money"> ${d.price} </td>
+                  <td class = "product-detail-last"> buy </td>
+                <tr>
+                  
+            -->
           </table>
         </div>
       </div>
