when stripeBizId loads, product and price inputs become visible in biz.html

--- a/public/biz.html
+++ b/public/biz.html
@@ -84,11 +84,11 @@
         <table ">
           <tr>
 
-            <td class = "td-first">
+            <td class = "td-first" id = "td-1">
               Promotion:
             </td>
 
-            <td>
+            <td id = "fade-in">
               <input
               id = "td-product"
               placeholder = "Promotion"
@@ -96,7 +96,7 @@
               >
             </td>
 
-            <td class = "td-money">
+            <td class = "td-money" id = "fade-in">
               <input
               id = "td-money"
               placeholder = "Price"
