--- a/public/biz.html
+++ b/public/biz.html
@@ -28,6 +28,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
  
      <!--CSS LINKS-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link href = "css/biz_position.css" rel = "stylesheet" type = "text/css" />
      <link href = "css/biz_style.css" rel = "stylesheet" type = "text/css" />
      <link href = "css/animation.css" rel = "stylesheet" type = "text/css" />
@@ -76,7 +77,8 @@
       <div id = "fade-in">
         <div id = "biz-bio">
           <p1 id = "biz-name"> Stripe ID: </p1>
-          <p id = "stripe-ID"> ..............loading.............. </p>
+          <i id = "loading-stripe-ID" class="fa fa-circle-o-notch fa-spin"></i>
+          <span id = "stripe-ID"> loading </span>
         </div>
       </div>
 
