--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href = "css/style.css" rel = "stylesheet" type = "text/css" />
     <link href = "css/position.css" rel = "stylesheet" type = "text/css" />
     <link href = "css/animation.css" rel = "stylesheet" type = "text/css" />
