added a $ before all price displays

--- a/public/biz.html
+++ b/public/biz.html
@@ -103,6 +103,7 @@
               id = "td-money"
               placeholder = "Price"
               oninput = "handlePrice(event)"
+              type="number"
               >
             </td>
 
