--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,9 @@
 
       <button id="banner-left" class = "top">
         <span id = "fade-in">
-          <span id = "login" onClick = "anonLogin()"> <!--  #login  -->
-            loading...
+          <i id = "loading-stripe-ID" class="fa fa-circle-o-notch fa-spin"></i>
+          <span id = "login" onClick = "anonLogin()">
+            loading 
           </span>
         </span>
       </button>
