okay it's still janky but the card thing is at the bottom now which is a less confusing start

--- a/public/index.html
+++ b/public/index.html
@@ -98,11 +98,15 @@
                   <td class = "td-money"> ${d.price} </td>
                   <td class = "product-detail-last"> buy </td>
                 <tr>
-                  
+
             -->
           </table>
         </div>
       </div>
+
+      <div id = "card-element">
+      </div>
+      
     </div>
 
     <script src = "/app.js">
