--- a/public/index.html
+++ b/public/index.html
@@ -104,9 +104,19 @@
         </div>
       </div>
 
-      <div id = "card-element">
-      </div>
+      <!-- #### STRIPE PAYMENT FORM #### -->
+      <form id="payment-form">
+        <div id="card-element">
+          <!-- Elements will create input elements here -->
+        </div>
       
+        <!-- We'll put the error messages in this element -->
+        <div id="card-errors" role="alert"></div>
+      
+        <button id="submit"> Pay </button>
+      </form>
+
+
     </div>
 
     <script src = "/app.js">
