--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <!-- update the version number as needed -->
     <!--<script src="http://js.stripe.com/v3/"></script>http address for testing, https for production-->
     <script src="http://js.stripe.com/v3/"></script>
+    <!--I'm actually loading this script in the JS files so that it loads http over localhost
+    and not on the deploy and I don't need to change anything-->
     
     <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
