--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
 
     </div>
 
-    <script src = "/app.js">
-    </script>
+    <script src = "/db_util.js"></script>
+    <script src = "/app.js"></script>
   </body>
 </html>
