updated firebase tools and began integrating environmental variables for firebase

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- update the version number as needed -->
     <!--<script src="http://js.stripe.com/v3/"></script>http address for testing, https for production-->
-    <script src="http://js.stripe.com/v3/"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <!--I'm actually loading this script in the JS files so that it loads http over localhost
     and not on the deploy and I don't need to change anything-->
     
