--- a/public/biz.html
+++ b/public/biz.html
@@ -6,7 +6,7 @@
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- update the version number as needed -->
-     <script src="http://js.stripe.com/v3/"></script>
+     <script src="https://js.stripe.com/v3/"></script>
      
      <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
      <!-- include only the Firebase features as you need -->
