--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
         <!-- We'll put the error messages in this element -->
         <div id="card-errors" role="alert"></div>
       
-        <button id="submit"> Pay </button>
+        <button id="submit"></button>
       </form>
 
 
