test function from db Utility is running

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,8 @@
 
 
     </div>
-    
+
+    <script src = "/databaseUtility.js"></script>
     <script src = "/app.js"></script>
   </body>
 </html>
