switched to dbu for the userPersistance functio in biz.js

--- a/public/biz.html
+++ b/public/biz.html
@@ -120,8 +120,8 @@
     </div>
 
     </div>
-    <script src = "/biz.js">
-    </script>
+    <script src = "/databaseUtility.js"></script>
+    <script src = "/biz.js"></script>
   </body>
 </html>
 
