added a loading spinner for the market before the items are laoded

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,9 @@
 
 
     <div id="content">
+
+        <i id = "loading-market" class="fa fa-circle-o-notch fa-spin"></i>
+
       <div id = "fade-in">
         <div id = "market-description">
             <p1 id = "market-title"> Market: </p1>
@@ -90,6 +93,7 @@
         </div>
 
         <div id = "market-list">
+
           <table id = "product-table">
             <!-- Table content generated from firestore data.
             That html snippet can be edited at "addRow()" of "../public/app.js"
