have added a loading circle to happen during redirect

--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
 
       <button id="banner-right" class = "top">
         <span id = "fade-in">
-          <span id = "are-you-biz" onClick = "onboardBusiness()"> <!--  #are-you-biz  -->
-            Are you a business?
+          <span id = "are-you-biz" onClick = "onboardBusiness()">
+            Sign Up!
           </span>
         </span>
       </button>
