added a spinner for the payment

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,7 @@
         </div>
       
         <!-- We'll put the error messages in this element -->
+        <i id = "paying-now" class="fa fa-circle-o-notch fa-spin"></i>
         <div id="card-errors" role="alert"></div>
       
         <button id="submit"></button>
