added a payment success message, spinner handling for payment form and some other UI stuff for payment form

--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,7 @@
         <div id="card-errors" role="alert"></div>
       
         <button id="submit"></button>
+        <p id = "payment-success"> ### Payment Success!!! ###</p>
       </form>
 
 
