--- a/public/index.html
+++ b/public/index.html
@@ -111,19 +111,20 @@
         </div>
       </div>
 
-      <!-- #### STRIPE PAYMENT FORM #### -->
+      <!-- #### STRIPE PAYMENT FORM ####
       <form id="payment-form">
         <div id="card-element">
-          <!-- Elements will create input elements here -->
+
         </div>
       
-        <!-- We'll put the error messages in this element -->
         <i id = "paying-now" class="fa fa-circle-o-notch fa-spin"></i>
         <div id="card-errors" role="alert"></div>
       
         <button id="submit"></button>
-        <p id = "payment-success"> ### Payment Success!!! ###</p>
+        <p id = "payment-success"> Payment Success!!! </p>
+        <p id = "reset-payform" onclick = "resetPaymentForm()"> Cancel</p>
       </form>
+      -->
 
 
     </div>
