fixed problem with the payment button breaking because of some element in there that stripe elements didn't like

--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
         <p id = "reset-payform" onclick = "resetPaymentForm()"> Cancel</p>
       </form>
       -->
-
+      <p4 id = "entry-note" > Simulate a successful payment by entering "4242424" repeating </p4>
 
     </div>
 
