added a message to be added to the dom if there's no data found in the database

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
           </span>
         </span>
       </button>
+
+      <!--<p1> Test mode is: On </p1>-->
   
       <button id="banner-middle" class = "top">
         <span id = "fade-in">
