made the testing:off message strike a bit more fear into my heart

--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,10 @@
 
       <div id = "fade-in">
         <div id = "market-description">
-            <p1 id = "market-title"> Market: </p1>
+            <p1 id = "market-title"> Market </p1>
             <p1 id = "market-blurb">
+              testmode is
+              <span id = "market-blurb-status"></span>
             </p1>
         </div>
 
