changed some of the styling for the floating market title

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
       <div id = "fade-in">
         <div id = "market-description">
-            <p1 id = "market-title"> -- the -- <br> Floating <br> Market </p1>
+            <p1 id = "market-title"> <span id = "the-the">  ~~~~~ the ~~~~~ </span><br> Floating <br> Market <br> <span id = "the-end">  `````````````````` </span> </p1>
             <p1 id = "market-blurb">
               testmode is
               <span id = "market-blurb-status"></span>
