did some color stuff

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,17 @@
 
         <div id = "market-list">
 
+        <div id = "intro-text-wrapper">
+          <p1 id = "intro-text"> Welcome to the floating market! This website is a boilerplate for creating online market-places using
+            <a href = "https://www.youtube.com/watch?v=9kRgVxULbag" class = "intro-links"> Google Firebase </a> and
+            <a href = "http://stripe.com/" class = "intro-links"> Stripe </a>, specifically Stripe Standard Accounts using
+            <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>.
+            You'll need to create your own Firebase Project, get your your own API keys, and add them as
+            <a href = "https://firebase.google.com/docs/functions/config-env" class = "intro-links"> environmental variables for Firebase </a>.
+            After that it should work with a firebase deploy command.
+          </p1>
+        </div>
+
           <table id = "product-table">
             <!-- Table content generated from firestore data.
             That html snippet can be edited at "addRow()" of "../public/app.js"
