--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
       <div id = "fade-in">
         <div id = "market-description">
-            <p1 id = "market-title"> <span id = "the-the">  ~~~~~ the ~~~~~ </span><br> Floating <br> Market <br> <span id = "the-end">  `````````````````` </span> </p1>
+            <p1 id = "market-title"> <span id = "the-the">the</span><br> Floating <br> Market <br> <span id = "the-end"></span> </p1>
             <p1 id = "market-blurb">
               testmode is
               <span id = "market-blurb-status"></span>
@@ -108,7 +108,7 @@
             <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>.
             You'll need to create your own Firebase Project, get your own API keys, and add them as
             <a href = "https://firebase.google.com/docs/functions/config-env" class = "intro-links"> environmental variables for Firebase </a>.
-            Then it should work with a firebase deploy command.
+            Then it should work with just a firebase deploy command! 
           </p1>
         </div>
 
