--- a/public/index.html
+++ b/public/index.html
@@ -85,47 +85,50 @@
 
     <div id="content">
 
+      <div id = "market-display">
         <i id = "loading-market" class="fa fa-circle-o-notch fa-spin"></i>
 
         <!-- Thanks Tim Holman! https://tholman.com/github-corners/-->
         <a href="https://github.com/Elijer/Firestripe" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
-      <div id = "fade-in">
-        <div id = "market-description">
-            <p1 id = "market-title"> <span id = "the-the">the</span><br> Floating <br> Market <br> <span id = "the-end"></span> </p1>
-            <p1 id = "market-blurb">
-              testmode is
-              <span id = "market-blurb-status"></span>
+        <div id = "fade-in">
+          <div id = "market-description">
+              <p1 id = "market-title"> <span id = "the-the">the</span><br> Floating <br> Market <br> <span id = "the-end"></span> </p1>
+              <p1 id = "market-blurb">
+                testmode is
+                <span id = "market-blurb-status"></span>
+              </p1>
+              <br>
+          </div>
+
+          <div id = "market-list">
+
+          <div id = "intro-text-wrapper">
+            <p1 id = "intro-text"> Welcome to the floating market! This website is a boilerplate for creating online market-places using
+              <a href = "https://www.youtube.com/watch?v=9kRgVxULbag" class = "intro-links"> Google Firebase </a> and
+              <a href = "http://stripe.com/" class = "intro-links">Stripe, </a> specifically Stripe Standard Accounts using
+              <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>.
+              You'll need to create your own Firebase Project, get your own API keys, and add them as
+              <a href = "https://firebase.google.com/docs/functions/config-env" class = "intro-links"> environmental variables for Firebase </a>.
+              Then it should work with just a firebase deploy command! 
             </p1>
-        </div>
+          </div>
 
-        <div id = "market-list">
+            <table id = "product-table">
+              <!-- Table content generated from firestore data.
+              That html snippet can be edited at "addRow()" of "../public/app.js"
+              Here it is for reference:
 
-        <div id = "intro-text-wrapper">
-          <p1 id = "intro-text"> Welcome to the floating market! This website is a boilerplate for creating online market-places using
-            <a href = "https://www.youtube.com/watch?v=9kRgVxULbag" class = "intro-links"> Google Firebase </a> and
-            <a href = "http://stripe.com/" class = "intro-links">Stripe, </a> specifically Stripe Standard Accounts using
-            <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>.
-            You'll need to create your own Firebase Project, get your own API keys, and add them as
-            <a href = "https://firebase.google.com/docs/functions/config-env" class = "intro-links"> environmental variables for Firebase </a>.
-            Then it should work with just a firebase deploy command! 
-          </p1>
-        </div>
+                  <tr id = product-row">
+                    <td class = "td-first"> ${d.biz} </td>
+                    <td> ${d.prod} </td>
+                    <td class = "td-money"> ${d.price} </td>
+                    <td class = "product-detail-last"> buy </td>
+                  <tr>
 
-          <table id = "product-table">
-            <!-- Table content generated from firestore data.
-            That html snippet can be edited at "addRow()" of "../public/app.js"
-            Here it is for reference:
-
-                <tr id = product-row">
-                  <td class = "td-first"> ${d.biz} </td>
-                  <td> ${d.prod} </td>
-                  <td class = "td-money"> ${d.price} </td>
-                  <td class = "product-detail-last"> buy </td>
-                <tr>
-
-            -->
-          </table>
+              -->
+            </table>
+          </div>
         </div>
       </div>
 
