--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,8 @@
     </div>
 
     <script src = "/app.js"></script>
+    <script src = "/state.js"></script>
+    <script src = "/domhelpers.js"></script>
     <script src = "/databaseUtility.js"></script>
   </body>
 </html>
