--- a/public/index.html
+++ b/public/index.html
@@ -104,13 +104,13 @@
           <div id = "market-list">
 
           <div id = "intro-text-wrapper">
-            <p1 id = "intro-text"> Welcome to the floating market! This website is a boilerplate for creating online market-places using
+            <p1 id = "intro-text"> When I turn test-mode off, this site is capable of processing real payments to real bank accounts. It is a project scaffold for creating online marketplaces using
               <a href = "https://www.youtube.com/watch?v=9kRgVxULbag" class = "intro-links"> Google Firebase </a> and
-              <a href = "http://stripe.com/" class = "intro-links">Stripe, </a> specifically Stripe Standard Accounts using
-              <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>.
-              You'll need to create your own Firebase Project, get your own API keys, and add them as
-              <a href = "https://firebase.google.com/docs/functions/config-env" class = "intro-links"> environmental variables for Firebase </a>.
-              Then it should work with just a firebase deploy command! 
+              <a href = "http://stripe.com/" class = "intro-links">Stripe, </a> specifically Standard Accounts with
+              <a href = "https://stripe.com/connect" class = "intro-links"> Stripe Connect </a>. Docs are on
+              <a href = "https://github.com/Elijer/Firestripe" class = "intro-links"> github. </a> Click around to try things out.
+              If you have any ideas for actually USING this functionality,
+              drop me an email at elijahclimb@gmail.com.
             </p1>
           </div>
 
